[gd_scene load_steps=2 format=3 uid="uid://d1xnl1il7tq8e"]

[ext_resource type="Script" path="res://scripts/splash_screen.gd" id="1_oqup7"]

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqup7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="ContinueLabel" type="Label" parent="VBoxContainer"]
process_priority = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "Press any key to continue..."
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129558, 0.129558, 1)
